[package]
name = "learn_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "model", "hello_grpc", "hello_redis"]

[dependencies]
model = { path = "model" }
hello_grpc = { path = "hello_grpc" }
hello_redis = { path = "hello_redis" }

axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "local-time"] }

serde = { version = "1.0", features = ["derive"] }
config = "0.13.3"
time = "0.3.29"

jsonwebtoken = "9.1.0"
ring = { version = "0.17.3", features = ["std"] }
# jwt-simple = "0.11"

[dev-dependencies]
serde_json = "1.0"