[package]
name = "hello_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

async-stream = "0.3"

[build-dependencies]
tonic-build = "0.10"