[package]
name = "hello_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

redis = { version = "0.24", features = [ "cluster-async", "tokio-comp" ] }
redis-macros = "0.2"
bb8 = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }